runs/runs/github.com/fleclercq/pymath-escargots/logs/test-notebook-Escargots.ipynb-2020-07-13T12.23.txt
[I 200713 12:23:30 inrepo:36] Testing notebook Escargots.ipynb
[I 200713 12:23:30 inrepo:45] Found kernel python3
[I 200713 12:23:31 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
import random

dé = [1,2,3,4,5,6]
ilot = ['Blanc','Bleu','Rouge','Jaune','Vert','Noir']

# initialisation du compteur
CompteurGénération = 

# tant qu’il y a plusieurs allèles

while (ilot[0]!=ilot[1] or ilot[0]!=ilot[2] or ilot[0]!=ilot[3] or ilot[0]!=ilot[4] or ilot[0]!=ilot[5]):
    # les 6 escargots se reproduisent
    sac=[ilot[0]]*random.choice(dé)+[ilot[1]]*random.choice(dé)+[ilot[2]]*random.choice(dé)+[ilot[3]]*random.choice(dé)+[ilot[4]]*random.choice(dé)+[ilot[5]]*random.choice(dé)
    # On garde 6 escargot pris au hasard
    ilot=random.sample(sac,6)
    # on compte ce tour (au suivant !)
    CompteurGénération = 

print("il reste l’escargot",ilot[0],"en",CompteurGénération,"générations")
------------------

[0;36m  File [0;32m"<ipython-input-23-eec78609630f>"[0;36m, line [0;32m7[0m
[0;31m    CompteurGénération =[0m
[0m                         ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-23-eec78609630f>, line 7)


Container exited with status: {'Error': None, 'StatusCode': 1}
